Fix css dark mode issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,6 @@ body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  color-scheme: light dark;
 }
 
 button {
