--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: light Only;
   color: rgba(168, 159, 159, 0.87);
   background-color: #242424;
 
